syntax = "proto3";

package grpc.health.v1;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/health/service";
option java_package = "org.wso2.apk.enforcer.discovery.service.health";
option java_outer_classname = "HealthProto";
option java_multiple_files = true;
option java_generic_services = true;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

// [#protodoc-title: Health]
service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
